--- a/DishOCR/assets/html/whatsnew.html
+++ b/DishOCR/assets/html/whatsnew.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-<title>What's new</title>
+<title>Instructions</title>
 <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
-<p><b>New in version 0.5.13:</b></p>
+<p><b>How to use this app?</b></p>
 <ul>
- <li></li>
- <li></li>
+ <li>Step 1: Align the dishname on the menu inside the rectangle.</li>
+ <li>Step 2: Image of the dish will appear on your screen.</li>
+ <li>Step 3: Alternatively, you can scroll down the menu list and click on the dishname.</li>
 </ul>
 </body>
 </html>
